Created build scripts for rv32d

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,8 @@
 	url = https://github.com/riscv/riscv-opcodes.git
 [submodule "riscv-tests"]
 	path = riscv-tests
-	url = https://github.com/riscv/riscv-tests.git
+	#url = https://github.com/riscv/riscv-tests.git
+	url = https://github.com/tovine/riscv-tests.git
 [submodule "riscv-llvm"]
 	path = riscv-llvm
 	url = https://github.com/riscv/riscv-llvm.git
